<resources>
    <string name="app_name">DarshanLab11</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="contacts">Contacts</string>
    <string name="name_id">Darshan Prajapati n01584247</string>
    <string name="enter_course_hint">Enter Course Name</string>
    <string name="enter_des_hint">Enter Course Description</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="err_invalid_course">Invalid course name</string>
    <string name="err_null_course_name">Course name is required</string>
    <string name="err_null_course_desc">Course description is required</string>
    <string name="addCourse_success_msg">Data has been saved!</string>
    <string name="addCourse_failure_msg">Please enter the data!</string>
    <string name="course_name">Course Name</string>
    <string name="course_description">Course Description</string>
    <string name="clear_field">" "</string>
    <string name="delete_msg">Data deleted successfully!</string>
    <string name="no_data_to_delete">No data to delete!</string>
    <string name="map_location">Cambay</string>
    <string name="map_snippet">Cambay Darshan</string>
    <string name="dismiss">Dismiss</string>
</resources>