<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Da11rshanFragment">

    <TextView
        android:id="@+id/DarTV"
        android:layout_width="300dp"
        android:layout_height="36dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/name_id"
        android:textColor="@color/red"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/DarCourseNameET"
        android:layout_width="375dp"
        android:layout_height="52dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="69dp"
        android:ems="10"
        android:hint="@string/enter_course_hint"
        android:inputType="textCapCharacters"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/DarDescriptionET"
        android:layout_width="377dp"
        android:layout_height="55dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="139dp"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ .,;:?!()-'"
        android:ems="10"
        android:hint="@string/enter_des_hint"
        android:inputType="text|textMultiLine"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/DarAddBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:layout_marginTop="208dp"
        android:text="@string/add"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/DarDeleteBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="300dp"
        android:layout_marginTop="208dp"
        android:text="@string/delete"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Recycler view to display our data-->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/DarRV"
        android:layout_width="410dp"
        android:layout_height="457dp"
        android:layout_marginTop="272dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>